crates/ferromark_renderer/tests/snapshots/renderer/nested_lists_mixed_markers.snap
---
source: crates/ferromark_renderer/tests/support/snapshot.rs
description: "- parent\n  - child a\n  - child b\n    1. deep one\n- sibling\n"
---
<ul>
<li>parent
<ul>
<li>child a</li>
<li>child b
<ol>
<li>deep one</li>
</ol>
</li>
</ul>
</li>
<li>sibling</li>
</ul>
