crates/ferromark_renderer/tests/snapshots/renderer/ordered_list_with_start.snap
---
source: crates/ferromark_renderer/tests/support/snapshot.rs
description: "3. third\n4. fourth\n"
---
<ol start="3">
<li>third</li>
<li>fourth</li>
</ol>
