crates/ferromark_renderer/tests/snapshots/renderer/sanitize_neutralizes_javascript_link.snap
---
source: crates/ferromark_renderer/tests/snapshot_render.rs
assertion_line: 29
description: "[run](javascript:alert(1))\n"
---
<p><a href="#">run</a></p>
