crates/ferromark_renderer/tests/snapshots/renderer/single_paragraph.snap
---
source: crates/ferromark_renderer/tests/snapshot_render.rs
assertion_line: 29
description: "Just a paragraph.\n"
---
<p>Just a paragraph.</p>
